# 3_month_course_2022

./: .gitignore  LICENSE  README.md  Untitled.ipynb  pyproject.toml
Lecture_TUKR/: README.md  TUKR.py  aa.py  animal.py  animals.py  ayukawa_TUKR.py  ccp_viewer.py  data_scratch.py  visualizer.py  visualizer_animal.py
Lecture_UKR/: README.md  pyproject.toml  ukr.py  ukr_jax.py
Lecture_UKR/ayukawa/: Check_UKR.py  data.py  ukr.py  visualizer.py
Lecture_UKR/fukunaga/: Grad_norm.py  PCA.py  animal.py  coffee.py  cross_test.py  data.py  ukr.py  ukr_animal.py  visualizer.py  カーネル.py
Lecture_UKR/fukunaga/datestore/animal/: features.txt  labels_animal.txt
Lecture_UKR/iki/: data.py  make_animation_ukr.py  show_images_ukr.py
Lecture_UKR/iki/ukr/: uke_main.py  ukr.py
Lecture_UKR/iki/ukr_gauss/: uke_gauss_main.py  ukr_gauss.py
Lecture_UKR/iki/ukr_itiyou/: uke_itiyou_main.py  ukr_itiyou.py
Lecture_UKR/sample/: cross_test.py  ukr_jax.py  ukr_numpy.py  ukr_tf.py  ukr_torch.py  visualizer.py
Lecture_UKR/tanaka/: cross_test.py  data.py  ukr.py  visualizer.py
Lecture_UKR/tokunaga/: cross_test.py  data.py  load.py  ukr.py  visualizer.py
basic_learning/: Untitled.ipynb  Untitled1.ipynb  flab_tech_ayukawa.ipynb  flab_tech_fukunaga.ipynb  flab_tech_fukunaga2.ipynb  flab_techniqs.ipynb  flab_techniqs_answer.ipynb  flab_techniqs_ayu.ipynb  flab_techniqs_iki.ipynb  flab_techniqs_instance_ver.ipynb  flab_techniqs_instance_ver_tanaka.ipynb  flab_techniqs_tanaka.ipynb  flab_techniqs_tokunaga.ipynb  古川研究室2022年度インターンシップ.ipynb
face/: load.py
face_project/: load.py
(+110 files in other folders)
