[tool.poetry]
name = "3_month_course_2022"
version = "0.1.0"
description = ""
authors = ["TetraMiyazaki <kpasso1015@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
jax = "^0.3.4"
jaxlib = "^0.3.2"
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"
jupyterlab-git = "^0.36.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
tqdm = "^4.64.0"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
