[tool.poetry]
name = "lecture_ukr"
version = "0.1.0"
description = ""
authors = ["古川修士 <furukawashuushi@furukawashuushinoMacBook-Air-2.local>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
