[tool.poetry]
name = "lecture_ukr"
version = "0.1.0"
description = ""
authors = ["Y-ayukawa <ayukawa.yusuke893@mail.kyutech.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
